--- a/public/web/our_work_page.html
+++ b/public/web/our_work_page.html
@@ -15,7 +15,7 @@
             background-color: black;
             color: white;
             padding: 10px 0;
-            width: 100vw;
+            width: 100%;
         }
         .header-container {
             max-width: 1200px;
@@ -29,18 +29,54 @@
             height: auto;
         }
         nav ul {
-            display: inline-flex;
+            display: flex;
             list-style: none;
             padding: 0;
+            margin: 0;
         }
         nav ul li {
             margin: 0 15px;
         }
         nav ul li a {
-            text-decoration: none;
             color: white;
             font-size: 16px;
             font-weight: bold;
+            text-decoration: none;
+        }
+        .user-icon {
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+        .user-icon button {
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+        .user-icon img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: white;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            width: 150px;
+            border-radius: 4px;
+        }
+        .dropdown-menu a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+        .dropdown-menu a:hover {
+            background-color: #f1f1f1;
         }
         .container {
             max-width: 1200px;
@@ -100,9 +136,14 @@
             height: auto;
             border-radius: 8px;
         }
+        .separator {
+            max-width: 1200px;
+            margin: 40px auto;
+            border-top: 2px solid #ccc;
+        }
     </style>
 </head>
-<body>
+<body onload="init()">
 
 <header>
     <div class="header-container">
@@ -111,11 +152,21 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/service">Services</a></li>
+                <li><a href="/resource">Resource</a></li>
                 <li><a href="/work">Our Work</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="user-icon">
+            <button onclick="toggleDropdown()">
+                <img src="/images/path-to-user-icon.jpg" alt="User Icon" style="width: 40px; height: 40px;">
+            </button>
+            <div id="dropdown-menu" class="dropdown-menu">
+                <a href="/sign-in">Sign in</a>
+                <a href="/create-account">Create an account</a>
+            </div>
+        </div>
     </div>
 </header>
 
@@ -140,7 +191,7 @@
             </div>
         </div>
     </div>
-
+    <div class="separator"></div>
     <div class="portfolio-section">
         <h2>Our Product</h2>
         <div class="portfolio-container">
@@ -159,6 +210,23 @@
         </div>
     </div>
 </div>
+
+<script>
+    function toggleDropdown() {
+        var dropdown = document.getElementById("dropdown-menu");
+        dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+    }
+
+    // Close the dropdown if clicked outside
+    window.onclick = function(event) {
+        if (!event.target.closest('.user-icon')) {
+            var dropdown = document.getElementById("dropdown-menu");
+            if (dropdown.style.display === "block") {
+                dropdown.style.display = "none";
+            }
+        }
+    };
+</script>
 
 <script src="/js/our_work_page.js"></script>
 
