--- a/public/web/create_account_page.html
+++ b/public/web/create_account_page.html
@@ -62,6 +62,12 @@
             cursor: pointer;
         }
 
+        .user-icon img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
         .dropdown-menu {
             display: none;
             position: absolute;
@@ -140,6 +146,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/service">Services</a></li>
+                <li><a href="/resource">Resource</a></li>
                 <li><a href="/work">Our Work</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact Us</a></li>
