--- a/public/web/sign_in_page.html
+++ b/public/web/sign_in_page.html
@@ -21,7 +21,7 @@
 
         .header-container {
             max-width: 1200px;
-            margin: 0 auto;
+            margin: 0 auto; 
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -62,6 +62,12 @@
             cursor: pointer;
         }
 
+        .user-icon img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+        
         .dropdown-menu {
             display: none;
             position: absolute;
@@ -112,8 +118,8 @@
 
         .login-container input[type="text"],
         .login-container input[type="password"] {
-            width: 80%; /* Adjusted width to make input fields shorter */
-            max-width: 300px; /* Optional: sets a max width */
+            width: 80%;
+            max-width: 300px;
             padding: 10px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
@@ -122,7 +128,7 @@
         }
 
         .login-container button {
-            width: 80%; /* Matches input width for consistency */
+            width: 80%;
             max-width: 300px;
             padding: 10px;
             background-color: #007bff;
@@ -147,6 +153,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/service">Services</a></li>
+                <li><a href="/resource">Resource</a></li>
                 <li><a href="/work">Our Work</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact Us</a></li>
@@ -174,7 +181,6 @@
 
     <button onclick="sign_in()">Login</button>
 </div>
-
 
 <script src='/js/sign_in_page.js'>
 </script>
